--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">@android:color/holo_orange_dark</color>
     <color name="colorAccent">@android:color/holo_orange_light</color>
     <color name="colorTabIndicator">#edebeb</color>
+    <color name="colorSecondaryText">@android:color/darker_gray</color>
 </resources>
