--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.detail.DetailActivity">
+    tools:context=".view.teamdetail.TeamDetailActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/main_toolbar"
