--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -9,9 +9,9 @@
         app:showAsAction="ifRoom"/>
 
     <item
-        android:id="@+id/next"
+        android:id="@+id/team"
         android:enabled="true"
-        android:title="@string/next"
+        android:title="@string/team"
         android:icon="@drawable/ic_teams"
         app:showAsAction="ifRoom"/>
 
