--- a/app/src/main/res/layout/activity_team_detail.xml
+++ b/app/src/main/res/layout/activity_team_detail.xml
@@ -14,70 +14,89 @@
         app:titleTextColor="@android:color/white"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-    <LinearLayout
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefresh"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/team_img"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:background="@drawable/shadow"/>
-
-        <TextView
-            android:id="@+id/team_name_txt"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Real Madrid"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:textSize="14sp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="@dimen/padding_small"
-            android:textColor="@android:color/black" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/year_txt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="1996"
-            android:textAlignment="center"
-            android:textSize="14sp"
-            android:layout_marginTop="8dp"
-            android:textColor="@android:color/black" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/stadium_txt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Camp Nou"
-            android:textAlignment="center"
-            android:textSize="14sp"
-            android:layout_marginBottom="@dimen/padding_small"
-            android:textColor="@android:color/black" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorAccent"
+                    android:orientation="vertical">
 
-    </LinearLayout>
+                    <ImageView
+                        android:id="@+id/team_img"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_gravity="center"
+                        android:background="@drawable/shadow"/>
 
+                    <TextView
+                        android:id="@+id/team_name_txt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Real Madrid"
+                        android:textStyle="bold"
+                        android:textAlignment="center"
+                        android:textSize="14sp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="@dimen/padding_small"
+                        android:textColor="@android:color/black" />
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tab_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:tabBackground="@color/colorAccent"
-        app:tabIndicatorColor="@android:color/white"
-        app:tabTextColor="@android:color/darker_gray"
-        app:tabSelectedTextColor="@android:color/white"
-        app:tabMaxWidth="0dp"
-        app:tabGravity="fill"
-        app:tabMode="fixed" />
+                    <TextView
+                        android:id="@+id/year_txt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="1996"
+                        android:textAlignment="center"
+                        android:textSize="14sp"
+                        android:layout_marginTop="8dp"
+                        android:textColor="@android:color/black" />
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/white" />
+                    <TextView
+                        android:id="@+id/stadium_txt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Camp Nou"
+                        android:textAlignment="center"
+                        android:textSize="14sp"
+                        android:layout_marginBottom="@dimen/padding_small"
+                        android:textColor="@android:color/black" />
+
+                </LinearLayout>
+
+                <android.support.design.widget.TabLayout
+                    android:id="@+id/tab_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:tabBackground="@color/colorAccent"
+                    app:tabIndicatorColor="@android:color/white"
+                    app:tabTextColor="@android:color/darker_gray"
+                    app:tabSelectedTextColor="@android:color/white"
+                    app:tabMaxWidth="0dp"
+                    app:tabGravity="fill"
+                    app:tabMode="fixed" />
+
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/view_pager"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/white" />
+
+            </LinearLayout>
+
+        </ScrollView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
